force-app/main/default/objects/HP_OmniChannelRouting__mdt/HP_OmniChannelRouting__mdt.object-meta.xml
<CustomObject>
    <label>HP_OmniChannelRouting</label>
    <pluralLabel>HP_OmniChannelRoutings</pluralLabel>
</CustomObject>