force-app/main/default/objects/HP_OmniChannelRouting__mdt/fields/HP_CritCaseOrigin__c.field-meta.xml
<CustomField>
    <fullName>HP_CritCaseOrigin__c</fullName>
    <description>Origine du case happ-e</description>
    <label>HP_CritCaseOrigin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>