force-app/main/default/objects/HP_OmniChannelRouting__mdt/fields/HP_CritCaseSubType__c.field-meta.xml
<CustomField>
    <fullName>HP_CritCaseSubType__c</fullName>
    <label>HP_CritCaseSubType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>