force-app/main/default/objects/HP_OmniChannelRouting__mdt/fields/HP_CritCaseType__c.field-meta.xml
<CustomField>
    <fullName>HP_CritCaseType__c</fullName>
    <label>HP_CritCaseType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>