force-app/main/default/objects/HP_OmniChannelRouting__mdt/fields/HP_CritQueue__c.field-meta.xml
<CustomField>
    <fullName>HP_CritQueue__c</fullName>
    <label>HP_CritQueue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>