force-app/main/default/objects/HP_OmniChannelRouting__mdt/fields/HP_CritRecordType__c.field-meta.xml
<CustomField>
    <fullName>HP_CritRecordType__c</fullName>
    <description>Type d’enregistrement de la requête</description>
    <label>HP_CritRecordType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>