force-app/main/default/objects/HP_OmniChannelRouting__mdt/fields/HP_CritSkillType__c.field-meta.xml
<CustomField>
    <fullName>HP_CritSkillType__c</fullName>
    <description>Type de compétence FO/BO</description>
    <label>HP_CritSkillType</label>
    <length>15</length>
    <type>Text</type>
</CustomField>