force-app/main/default/objects/HP_OmniChannelRouting__mdt/fields/HP_ValuePriority__c.field-meta.xml
<CustomField>
    <fullName>HP_ValuePriority__c</fullName>
    <label>HP_ValuePriority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
                <default>true</default>
                <label>High</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>