force-app/main/default/objects/HP_OmniChannelRouting__mdt/fields/HP_ValueSkill__c.field-meta.xml
<CustomField>
    <fullName>HP_ValueSkill__c</fullName>
    <label>HP_ValueSkill</label>
    <length>255</length>
    <type>Text</type>
</CustomField>