force-app/main/default/objects/HP_OmniChannelRouting__mdt/listViews/HP_OmniChannelRoutingView.listView-meta.xml
<ListView>
    <fullName>HP_OmniChannelRoutingView</fullName>
    <columns>MasterLabel</columns>
    <columns>HP_CritSkillType__c</columns>
    <columns>HP_CritCaseOrigin__c</columns>
    <columns>HP_CritRecordType__c</columns>
    <columns>HP_CritCaseType__c</columns>
    <columns>HP_CritCaseSubType__c</columns>
    <columns>HP_CritQueue__c</columns>
    <columns>HP_ValueSkill__c</columns>
    <columns>HP_ValuePriority__c</columns>
    <filterScope>Everything</filterScope>
    <label>HP_OmniChannelRoutingView</label>
    <language>en_US</language>
</ListView>